k8s-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-k8s-demo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-k8s-demo
  template:
    metadata:
      labels:
        app: flask-k8s-demo
    spec:
      containers:
      - name: flask-k8s-demo
        image: charliehpd/flask-k8s-demo:latest
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
