cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-k8s-demo
  namespace: flask-k8s-demo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    app: flask-k8s-demo
